notrify z-index fix

--- a/.anon.dir/Site/base/knob.css
+++ b/.anon.dir/Site/base/knob.css
@@ -1101,7 +1101,7 @@
    notedeck
    {
       display:inline-block; position:absolute; box-sizing:border-box;
-      z-index:9999;
+      z-index:99999;
       text-align:left; color:#BBB;
       outline:none;
    }
@@ -1124,7 +1124,7 @@
    noteicon
    {
       display:inline-block; position:absolute; box-sizing:border-box;
-      z-index:999;
+      z-index:99999;
       background-color:#2e3133;
       text-align:center; color:#FFF;
       padding:1px;
